--- a/sites/all/themes/orwell/sass/component/_carousel.scss
+++ b/sites/all/themes/orwell/sass/component/_carousel.scss
@@ -93,6 +93,7 @@
     @include outline-button($color__font-gray--dark, $color__border-gray--dark);
     float: right;
     margin-top: -.4rem;
+    margin-left: 1rem;
   }
 }
 
